--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
-    "@zeit/next-typescript": "^1.1.0"
+    "@zeit/next-typescript": "^1.1.0",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0"
   }
 }
