--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,11 +11,14 @@
     "build": "next build"
   },
   "dependencies": {
+    "@zeit/next-sass": "^0.2.0",
     "next": "^6.1.2",
+    "node-sass": "^4.9.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0"
   },
   "devDependencies": {
+    "@types/next": "^6.1.4",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
     "@zeit/next-typescript": "^1.1.0",
