--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,12 +15,15 @@
     "next": "^6.1.2",
     "node-sass": "^4.9.3",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@types/next": "^6.1.4",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.7",
     "@zeit/next-typescript": "^1.1.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0"
